app/assets/stylesheets/components/_urgency.scss
// .fa-solid {
//   padding-right: 15px;
//   display: flex;
//   align-items: center;
// }

.urgent {
  color: #FE6D6D;
  padding-right: 15px;
  display: flex;
  align-items: center;
}

.medium {
  color: #FDEA42;
  padding-right: 15px;
  display: flex;
  align-items: center;
}

.not-urgent{
  color: #4FBE54;
  padding-right: 15px;
  display: flex;
  align-items: center;
}

.align {
  display: flex;
  vertical-align: middle;
  justify-content: space-between;
  border-bottom: solid #D9D9D9 1px;
  padding: 5px;
}

.dropdown-menu {
  padding: 0;
}

.trash {
  color: rgba(0, 0, 0, .40);
  font-size: 20px;
}

